[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/enemies/namehage_attacker/namehage_attacker.png" type="Texture" id=1]
[ext_resource path="res://stages/assets/precise_visibility_notifier_2D.gd" type="Script" id=2]
[ext_resource path="res://characters/enemies/namehage_attacker/mask.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=12]
bounce = 0.5

[sub_resource type="CircleShape2D" id=14]
radius = 8.06226

[sub_resource type="CircleShape2D" id=13]
radius = 8.0

[node name="Mask" type="RigidBody2D"]
mass = 100.0
physics_material_override = SubResource( 12 )
gravity_scale = 10.0
script = ExtResource( 3 )

[node name="MaskSprite" type="Sprite" parent="."]
position = Vector2( -4, 1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 45.514, 176.904, 23.4988, 36.7807 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 7 )
shape = SubResource( 14 )

[node name="CollisionDeactivateTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2

[node name="PreciseVisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -3.5, 8.9407e-07 )
scale = Vector2( 1.25, 1.9 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3, 7 )
shape = SubResource( 13 )
